--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -2,14 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>로그인 테스트</title>
+    <title>로그인 창</title>
+    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.js"></script>
 </head>
+
 <body>
+
     <form method="post" action="/login">
         <h2>로그인 정보를 입력해 주세요</h2>
-        <input type="text" name="username" placeholder="Username">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">로그인</button>
+        <div class="form-group">
+            <label for="username_id">Username</label>
+            <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
+        </div>
+
+        <div class="form-group">
+            <label for="password_id">Password</label>
+            <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
+        </div>
+
+        <input type="submit" class="btn btn-primary">로그인</input>
     </form>
+
+
 </body>
 </html>
