--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -9,21 +9,33 @@
 </head>
 
 <body>
+    <div class="jumbotron">
+        <form method="post" action="/login">
 
-    <form method="post" action="/login">
-        <h2>로그인 정보를 입력해 주세요</h2>
-        <div class="form-group">
-            <label for="username_id">Username</label>
-            <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
-        </div>
+            <div class="page-header">
+                <h2>로그인 정보를 입력해 주세요</h2>
+            </div>
 
-        <div class="form-group">
-            <label for="password_id">Password</label>
-            <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
-        </div>
+            <div class="form-group">
+                <label for="username_id">Username</label>
+                <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
+            </div>
 
-        <input type="submit" class="btn btn-primary">로그인</input>
-    </form>
+            <div class="form-group">
+                <label for="password_id">Password</label>
+                <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
+            </div>
+
+            <button type="submit" class="btn btn-primary">로그인</button>
+
+            {% if error_msg %}
+            <div class="alert alert-danger">
+                {{error_msg}}
+            </div>
+            {% endif %}
+
+        </form>
+    </div>
 
 
 </body>
