--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -9,33 +9,43 @@
 </head>
 
 <body>
-    <div class="jumbotron">
-        <form method="post" action="/login">
+    <form class="form-horizontal" method="post" action="/login">
 
-            <div class="page-header">
-                <h2>로그인 정보를 입력해 주세요</h2>
-            </div>
+        <div class="page-header">
+            <h2>로그인 정보를 입력해 주세요</h2>
+        </div>
 
-            <div class="form-group">
-                <label for="username_id">Username</label>
+        <div class="form-group">
+            <label class="control-label col-lg-1" for="username_id">Username : </label>
+            <div class="col-lg-3">
                 <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
             </div>
+        </div>
 
-            <div class="form-group">
-                <label for="password_id">Password</label>
+        <div class="form-group">
+            <label class="control-label col-lg-1" for="password_id">Password : </label>
+            <div class="col-lg-3">
                 <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
             </div>
+        </div>
 
-            <button type="submit" class="btn btn-primary">로그인</button>
-
-            {% if error_msg %}
-            <div class="alert alert-danger">
-                {{error_msg}}
+        <div class="form-group">
+            <div class="col-lg-offset-1 col-lg-2">
+                <button type="submit" class="btn btn-primary">로그인</button>
             </div>
-            {% endif %}
+        </div>
 
-        </form>
-    </div>
+        {% if error_msg %}
+        <div class="form-group">
+            <div class="col-lg-offset-1 col-lg-2">
+                <div class="alert alert-danger">
+                    {{error_msg}}
+                </div>
+            </div>
+        </div>
+        {% endif %}
+
+    </form>
 
 
 </body>
