--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -5,11 +5,11 @@
     <title>로그인 창</title>
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap.js"></script>
 </head>
 
 <body>
-    <form class="form-horizontal" method="post" action="/login">
+    <form class="form-horizontal" method="post" action="/check">
 
         <div class="page-header">
             <h2>로그인 정보를 입력해 주세요</h2>
