--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -5,7 +5,7 @@
     <title>Number to Korean</title>
     <link rel="stylesheet" href="static/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.js"></script>
+    <script type="text/javascript" src="static/js/bootstrap.js"></script>
 
 </head>
 <body>
@@ -13,6 +13,9 @@
         <div class="container-fluid">
 
                 <form method="post" action="/change">
+                    <div class="form-group">
+                        {{username}}님 접속중...
+                    </div>
 
                     <div class="form-group">
                         <label for="input">INPUT</label>
