--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -26,20 +26,12 @@
 
                     <div class="col-md-12 text-center">
                         <hr>
-                        <button class="btn btn-primary btn-lg btn-block" id="myButton" onclick="button_click()">Change!</button>
+                        <button class="btn btn-primary btn-lg btn-block" id="myButton">Change!</button>
                         <hr>
                     </div>
 
 
-                    <script language="JavaScript">
-                        function button_click(){
-                            //var input_string = document.getElementById("input").value;
-                            var input_string = $("#input").val();
 
-                            //document.getElementById("output").value = input_string;
-                            $("#output").val(input_string);
-                        };
-                    </script>
 
 
 
