--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -10,53 +10,57 @@
 <body>
     <div class="container-fluid">
 
-        <table class="table table-hover">
-            <thead>
-                <tr>
-                    <th>번호</th>
-                    <th>텍스트</th>
-                    <th>기사 번호</th>
-                    <th>기사 수집일</th>
-                    <th>텍스트 편집일</th>
-                    <th>조회수</th>
-                </tr>
-            </thead>
 
-            <tbody>
-            {% for row in board_total|sort(attribute='0', reverse=True) %}
-                {% set original = row[1] %}
-                {% set converted = row[2] %}
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>번호</th>
+                        <th>텍스트</th>
+                        <th>기사 번호</th>
+                        <th>기사 수집일</th>
+                        <th>텍스트 편집일</th>
+                        <th>조회수</th>
+                    </tr>
+                </thead>
 
-                <tr>
-                    <th>{{row[0]}}</th>
-                    <th><a href="#" onclick="text_click(`{{original}}`, `{{converted}}`)">{{row[1]}}</a></th>
-                    <th>{{row[3]}}</th>
-                    <th>{{row[4]}}</th>
-                    <th>{{row[5]}}</th>
-                    <th>{{row[6]}}</th>
-                </tr>
-            {% endfor %}
+                <tbody>
+                {% for row in board_total|sort(attribute='0', reverse=True) %}
+                    {% set original = row[1] %}
+                    {% set converted = row[2] %}
 
-            </tbody>
-        </table>
+                    <tr>
+                        <th>{{row[0]}}</th>
+                        <!--
+                        <th><a href="#" onclick="text_click(`{{original}}`, `{{converted}}`)">{{row[1]}}</a></th>
+                        -->
+                        <th><a href="#" onclick="text_click(`{{row[0]}}`)">{{row[1]}}</a></th>
+
+                        <th>{{row[3]}}</th>
+                        <th>{{row[4]}}</th>
+                        <th>{{row[5]}}</th>
+                        <th>{{row[6]}}</th>
+                    </tr>
+                {% endfor %}
+
+                </tbody>
+            </table>
 
 
-        <div class="text-right">
-            <button class="btn btn-success" onclick="text_write()">글쓰기</button>
-        </div>
+
+            <div class="text-center">
+                <ul class="pagination">
+                    <li><a href="#">1</a></li>
+                    <li><a href="#">2</a></li>
+                </ul>
+            </div>
 
 
-        <div class="text-center">
-            <ul class="pagination">
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-            </ul>
-        </div>
 
     </div>
 
 
     <script language="JavaScript">
+        /*
         function text_click(original, converted){
             var original_text = original;
             var converted_text = converted;
@@ -64,10 +68,14 @@
 
             location.href = url;
         }
+        */
 
-        function text_write(){
-            alert('글쓰기!');
+        function text_click(id){
+
+            location.href = "text_board/" + id + "/edit";
         }
+
+
     </script>
 
 </body>
