--- a/templates/text_convert.html
+++ b/templates/text_convert.html
@@ -2,26 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
-    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <title>텍스트 편집 창</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/bootstrap.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.js"></script>
 </head>
 <body>
-
-
 
     <div class="container">
 
         <div class="form-group">
             <label for="ORIGINAL">ORIGINAL</label>
-            <input type="text" class="form-control" id="ORIGINAL" name="ORIGINAL" value="">
+            <input type="text" class="form-control" id="ORIGINAL" name="ORIGINAL" value="{{original_text}}">
         </div>
 
 
         <div class="form-group">
             <label for="CONVERTED">CONVERTED</label>
-            <input type="text" class="form-control" id="CONVERTED" name="CONVERTED">
+            <input type="text" class="form-control" id="CONVERTED" name="CONVERTED" value="{{converted_text}}">
         </div>
 
 
@@ -39,7 +37,7 @@
         <div class="form-group">
             <div class="row">
                 <div class="col-md-1">
-                    <button class="btn btn-success" id="cancel" onclick="cancel()">취소</button>
+                    <button class="btn btn-success" id="cancel" onclick="history.back();">취소</button>
                 </div>
 
                 <div class="col-md-offset-10 col-md-1">
@@ -94,9 +92,7 @@
             }
         }
 
-        function cancel(){
-            location.href = "text_board";
-        }
+
 
         function save(){
 
