--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -6,12 +6,54 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+
+
+    <script language="JavaScript">
+
+
+
+
+
+        function edit_text(id){
+            alert('edit ' + id);
+
+            location.href = "text_board/" + id + "/edit";
+        }
+
+        function delete_text(id){
+            alert('delete ' + id);
+
+            location.href = "text_board/" + id + "/delete";
+        }
+
+        function create_text(){
+            alert('create');
+
+            location.href = "text_board/create";
+        }
+
+
+    </script>
+
 </head>
 <body>
     <div class="container-fluid">
 
+            <div class="page-header">
+                <h2>텍스트 변환 게시판</h2>
+            </div>
 
-            <table class="table table-hover">
+
+
+            <p>텍스트 필터</p>
+            <div class="col-md-5">
+                <input class="form-control" type="text" id="myFilter" onkeyup="text_filter()" type="text" placeholder="Search...">
+            </div>
+            <br><br>
+
+
+
+            <table class="table table-hover" id="myTable">
                 <thead>
                     <tr>
                         <th>번호</th>
@@ -19,28 +61,39 @@
                         <th>기사 번호</th>
                         <th>기사 수집일</th>
                         <th>텍스트 편집일</th>
-                        <th>조회수</th>
+                        <th>수정 횟수</th>
+                        <th></th>
                     </tr>
                 </thead>
 
                 <tbody>
-                {% for row in board_total|sort(attribute='0', reverse=True) %}
+                {% for row in board_total|sort(attribute='sent_id', reverse=True) %}
                     <tr>
-                        <th>{{row[0]}}</th>
-                        <!--
-                        <th><a href="#" onclick="text_click(`{{original}}`, `{{converted}}`)">{{row[1]}}</a></th>
-                        -->
-                        <th><a href="#" onclick="text_click(`{{row[0]}}`)">{{row[1]}}</a></th>
+                        <th>{{row.sent_id}}</th>
 
-                        <th>{{row[2]}}</th>
-                        <th>{{row[3]}}</th>
-                        <th>{{row[4]}}</th>
-                        <th>{{row[5]}}</th>
+
+                        {% if row.sent_confirm == 1 %}
+                            <th><a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_converted}}</a></th>
+                        {% else %}
+                            <th><a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_original}}</a></th>
+                        {% endif %}
+
+
+                        <th>{{row.article_id}}</th>
+                        <th>{{row.article_collected_date}}</th>
+                        <th>{{row.sent_modified_date}}</th>
+                        <th>{{row.sent_converted_count}}</th>
+                        <th><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}')"></th>
                     </tr>
                 {% endfor %}
 
                 </tbody>
             </table>
+
+
+            <div class="text-right">
+                <input type="button" class="btn btn-primary" value="글쓰기" onclick="create_text()">
+            </div>
 
 
 
@@ -56,16 +109,7 @@
     </div>
 
 
-    <script language="JavaScript">
 
-
-        function text_click(id){
-
-            location.href = "text_board/" + id + "/edit";
-        }
-
-
-    </script>
 
 </body>
 </html>
