--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -4,12 +4,41 @@
     <meta charset="UTF-8">
     <title>텍스트 변환 게시판</title>
     <link rel="stylesheet" href="/static/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.js"></script>
+
 
 
     <script language="JavaScript">
 
+        $(document).ready(function() {
+
+            $("#myFilter").keyup(function(){
+
+                var value = $(this).val();
+
+                $("#myTbody a:contains('" + value + "')").parent().parent().show();
+                $("#myTbody a:not(:contains('" + value + "'))").parent().parent().hide();
+
+
+            });
+
+            $("#myTable").DataTable({
+                "stateSave" : true,
+                "searching" : false,
+                "columnDefs" : [
+                    {width:"5%", targets:0},
+                    {width:"7%", targets:2},
+                    {width:"15%", targets:3},
+                    {width:"15%", targets:4},
+                    {width:"7%", targets:5}
+                ]
+            });
+
+        });
 
 
 
@@ -47,43 +76,45 @@
 
             <p>텍스트 필터</p>
             <div class="col-md-5">
-                <input class="form-control" type="text" id="myFilter" onkeyup="text_filter()" type="text" placeholder="Search...">
+                <input class="form-control" type="text" id="myFilter" type="text" placeholder="Search...">
             </div>
-            <br><br>
+            <br><br><br>
 
 
 
             <table class="table table-hover" id="myTable">
                 <thead>
                     <tr>
-                        <th>번호</th>
-                        <th>텍스트</th>
-                        <th>기사 번호</th>
-                        <th>기사 수집일</th>
-                        <th>텍스트 편집일</th>
-                        <th>수정 횟수</th>
+                        <th class="text-center">번호</th>
+                        <th class="text-center">텍스트</th>
+                        <th class="text-center">기사 번호</th>
+                        <th class="text-center">기사 수집일</th>
+                        <th class="text-center">텍스트 편집일</th>
+                        <th class="text-center">수정 횟수</th>
                         <th></th>
                     </tr>
                 </thead>
 
-                <tbody>
+                <tbody id="myTbody">
                 {% for row in board_total|sort(attribute='sent_id', reverse=True) %}
                     <tr>
-                        <th>{{row.sent_id}}</th>
-
+                        <td class="text-center">{{row.sent_id}}</td>
 
                         {% if row.sent_confirm == 1 %}
-                            <th><a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_converted}}</a></th>
+                        <td>
+                            <a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_converted}}</a>
+                        </td>
                         {% else %}
-                            <th><a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_original}}</a></th>
+                        <td>
+                            <a href="#" onclick="edit_text('{{row.sent_id}}')">{{row.sent_original}}</a>
+                        </td>
                         {% endif %}
 
-
-                        <th>{{row.article_id}}</th>
-                        <th>{{row.article_collected_date}}</th>
-                        <th>{{row.sent_modified_date}}</th>
-                        <th>{{row.sent_converted_count}}</th>
-                        <th><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}')"></th>
+                        <td class="text-center">{{row.article_id}}</td>
+                        <td class="text-center">{{row.article_collected_date}}</td>
+                        <td class="text-center">{{row.sent_modified_date}}</td>
+                        <td class="text-center">{{row.sent_converted_count}}</td>
+                        <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}')"></td>
                     </tr>
                 {% endfor %}
 
@@ -95,14 +126,6 @@
                 <input type="button" class="btn btn-primary" value="글쓰기" onclick="create_text()">
             </div>
 
-
-
-            <div class="text-center">
-                <ul class="pagination">
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                </ul>
-            </div>
 
 
 
