--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -1,52 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>로그인 창</title>
-    <link rel="stylesheet" href="static/css/bootstrap.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="static/js/bootstrap.js"></script>
-</head>
+{% extends "base.html" %}
+{% block title %}LOGIN{% endblock %}
+{% block content %}
+    <div class="container">
+        <form class="form-horizontal" method="post" action="/login_check">
 
-<body>
-    <form class="form-horizontal" method="post" action="/check">
-
-        <div class="page-header">
-            <h2>로그인 정보를 입력해 주세요</h2>
-        </div>
-
-        <div class="form-group">
-            <label class="control-label col-lg-1" for="username_id">Username : </label>
-            <div class="col-lg-3">
-                <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
+            <div class="page-header">
+                <h2>로그인 정보를 입력해 주세요</h2>
             </div>
-        </div>
 
-        <div class="form-group">
-            <label class="control-label col-lg-1" for="password_id">Password : </label>
-            <div class="col-lg-3">
-                <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-lg-offset-1 col-lg-2">
-                <button type="submit" class="btn btn-primary">로그인</button>
-            </div>
-        </div>
-
-        {% if error_msg %}
-        <div class="form-group">
-            <div class="col-lg-offset-1 col-lg-2">
-                <div class="alert alert-danger">
-                    {{error_msg}}
+            <div class="form-group">
+                <label class="control-label col-lg-2" for="username_id">Username : </label>
+                <div class="col-lg-3">
+                    <input type="text" class="form-control" name="username" id="username_id" placeholder="사용자 이름을 써주세요.">
                 </div>
             </div>
-        </div>
-        {% endif %}
 
-    </form>
+            <div class="form-group">
+                <label class="control-label col-lg-2" for="password_id">Password : </label>
+                <div class="col-lg-3">
+                    <input type="password" class="form-control" name="password" id="password_id" placeholder="비밀번호를 써주세요.">
+                </div>
+            </div>
 
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-2">
+                    <button type="submit" class="btn btn-primary">로그인</button>
+                </div>
+            </div>
 
-</body>
-</html>
+            {% if error_msg %}
+            <div class="form-group">
+                <div class="col-lg-offset-2 col-lg-3">
+                    <div class="alert alert-danger">
+                        {{error_msg}}
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+
+        </form>
+
+    </div>
+
+{% endblock %}
