--- a/templates/text_create.html
+++ b/templates/text_create.html
@@ -1,24 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>텍스트 추가 창</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/js/bootstrap.js"></script>
-
-</head>
-<body>
+{% extends "base.html" %}
+{% block title %}CREATE{% endblock %}
+{% block content %}
     <div class="container">
 
         <form method="post" action="/text_board/create">
 
+            {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="alert alert-danger" role="alert">
+                    <ul class="flashes">
+                        {% for message in messages %}
+                            <li class="message_flash">{{message}}</li>
+                        {% endfor %}
+                    </ul>
+                    </div>
+                {% endif %}
+            {% endwith %}
+
             <div class="page-header">
-                <h2>등록할 텍스트를 입력해 주세요.</h2>
+                <h2>새로 등록할 텍스트를 입력해 주세요.</h2>
             </div>
 
             <div class="form-group">
-                <label for="text_register">등록할 텍스트</label>
+                <label for="text_register">새로 등록할 텍스트</label>
                 <input type="text" class="form-control" name="text_register", id="text_register">
             </div>
 
@@ -27,11 +31,11 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-1">
-                        <input type="button" class="btn btn-danger" onclick="history.back()" value="취소">
+                        <input type="button" class="btn btn-danger" onclick="location.href ='/text_board'" value="취소">
                     </div>
 
                     <div class="col-md-1">
-                        <input type="submit" class="btn btn-primary" value="글쓰기">
+                        <input type="submit" class="btn btn-primary" value="등록">
                     </div>
                 </div>
             </div>
@@ -39,5 +43,4 @@
         </form>
 
     </div>
-</body>
-</html>
+{% endblock %}
