--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -68,11 +68,11 @@
 
 
 
-    <div class="navbar navbar-default">
+    <div class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">{{username}}님 접속중...</a></li>
-                    <li><a href="#"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+                    <li><a href="{{url_for('logout')}}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
                 </ul>
         </div>
     </div>
