--- a/templates/text_convert.html
+++ b/templates/text_convert.html
@@ -46,14 +46,14 @@
 
         <form id="frm" method="post" action="/text_board">
 
-            {% with messages = get_flashed_messages() %}
+            {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                     <div class="alert alert-danger" role="alert">
-                    <ul class="flashes">
-                        {% for message in messages %}
-                            <li class="message_flash">{{message}}</li>
-                        {% endfor %}
-                    </ul>
+                        <ul class="flashes">
+                            {% for category, message in messages %}
+                                <li class="{{category}}">{{message}}</li>
+                            {% endfor %}
+                        </ul>
                     </div>
                 {% endif %}
             {% endwith %}
