--- a/templates/text_board.html
+++ b/templates/text_board.html
@@ -20,6 +20,7 @@
 
             });
 
+            /*
             $("#myTable").DataTable({
                 "stateSave" : true,
                 "searching" : false,
@@ -34,7 +35,7 @@
                     {orderable:false, targets:6}
                 ]
             });
-
+            */
         });
 
         /*
@@ -102,45 +103,47 @@
         <br><br><br>
 
 
+        {{pagination.info}}
+        {{pagination.links}}
+            <table class="table table-hover" id="myTable">
+                <thead>
+                    <tr>
+                        <th style="width : 5%" class="text-center">번호</th>
+                        <th class="text-center">텍스트</th>
+                        <th style="width : 7%" class="text-center">기사 번호</th>
+                        <th style="width : 10%" class="text-center">기사 수집일</th>
+                        <th style="width : 10%" class="text-center">텍스트 편집일</th>
+                        <th style="width : 7%" class="text-center">수정 횟수</th>
+                        <th></th>
+                    </tr>
+                </thead>
 
-        <table class="table table-hover" id="myTable">
-            <thead>
-                <tr>
-                    <th class="text-center">번호</th>
-                    <th class="text-center">텍스트</th>
-                    <th class="text-center">기사 번호</th>
-                    <th class="text-center">기사 수집일</th>
-                    <th class="text-center">텍스트 편집일</th>
-                    <th class="text-center">수정 횟수</th>
-                    <th></th>
-                </tr>
-            </thead>
+                <tbody id="myTbody">
+                {% for row in board_total|sort(attribute='sent_id', reverse=True) %}
+                    <tr>
+                        <td class="text-center">{{row.sent_id}}</td>
 
-            <tbody id="myTbody">
-            {% for row in board_total|sort(attribute='sent_id', reverse=True) %}
-                <tr>
-                    <td class="text-center">{{row.sent_id}}</td>
+                        {% if row.sent_confirm == 1 %}
+                        <td>
+                            <a href="/text_board/{{row.sent_id}}/edit">{{row.sent_converted}}</a>
+                        </td>
+                        {% else %}
+                        <td>
+                            <a href="/text_board/{{row.sent_id}}/edit">{{row.sent_original}}</a>
+                        </td>
+                        {% endif %}
 
-                    {% if row.sent_confirm == 1 %}
-                    <td>
-                        <a href="/text_board/{{row.sent_id}}/edit">{{row.sent_converted}}</a>
-                    </td>
-                    {% else %}
-                    <td>
-                        <a href="/text_board/{{row.sent_id}}/edit">{{row.sent_original}}</a>
-                    </td>
-                    {% endif %}
+                        <td class="text-center">{{row.article_id}}</td>
+                        <td class="text-center">{{row.article_collected_date}}</td>
+                        <td class="text-center">{{row.sent_modified_date}}</td>
+                        <td class="text-center">{{row.sent_converted_count}}</td>
+                        <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}')"></td>
+                    </tr>
+                {% endfor %}
 
-                    <td class="text-center">{{row.article_id}}</td>
-                    <td class="text-center">{{row.article_collected_date}}</td>
-                    <td class="text-center">{{row.sent_modified_date}}</td>
-                    <td class="text-center">{{row.sent_converted_count}}</td>
-                    <td class="text-center"><input type="button" class="btn btn-danger btn-sm" id="delete" value="삭제" onclick="delete_text('{{row.sent_id}}')"></td>
-                </tr>
-            {% endfor %}
-
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        {{pagination.links}}
 
 
         <div class="text-right">
