--- a/templates/text_create.html
+++ b/templates/text_create.html
@@ -1,6 +1,28 @@
 {% extends "base.html" %}
 {% block title %}CREATE{% endblock %}
 
+{% block head %}
+    {{super()}}
+    <script>
+        $.urlParam = function(name){
+            var results = new RegExp('[\?&]' + name + '=([^]*)').exec(window.location.href);
+
+            if (results==null){
+               return null;
+            }
+            else{
+               return results[1] || 0;
+            }
+        };
+
+        function go_back(){
+            page = $.urlParam('page');
+            //location.href = '/text_board?page=' + page;
+            location.replace('/text_board?page=' + page);
+        }
+    </script>
+{% endblock %}
+
 {% block content %}
     <div class="container">
 
@@ -32,7 +54,7 @@
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-1">
-                        <input type="button" class="btn btn-danger" onclick="location.href ='/text_board'" value="취소">
+                        <input type="button" class="btn btn-danger" onclick="go_back()" value="취소">
                     </div>
 
                     <div class="col-md-1">
